# twitter_delete

./: Cargo.toml  README.md  diesel.toml
migrations/2023-01-28-191124_create/: down.sql  up.sql
migrations/2023-01-30-074522_checked/: down.sql  up.sql
migrations/2023-02-04-024457_multi_user/: down.sql  up.sql
migrations/2023-02-04-150438_index/: down.sql  up.sql
src/: db.rs  main.rs  models.rs  schema.patch  schema.rs  twitter.rs  util.rs
