[package]
name = "twitter_delete"
version = "0.1.0"
edition = "2021"

[dependencies]
diesel = { version = "2.0.3", features = ["sqlite"] }
serde = "1.0.152"
serde_json = "1.0.91"
# Use clap v3 until colors are restored.
# See https://github.com/clap-rs/clap/issues/3234
clap = { version = "3.2.23", features = ["derive", "color"] }
anyhow = "1.0.68"
