[package]
name = "twitter_delete"
version = "0.1.0"
edition = "2021"

[dependencies]
diesel = { version = "2.0.3", features = ["sqlite", "time"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
# Use clap v3 until colors are restored.
# See https://github.com/clap-rs/clap/issues/3234
clap = { version = "3.2.23", features = ["derive", "color"] }
anyhow = "1.0.68"
reqwest = { version = "0.11.14", features = [
    "deflate",
    "gzip",
    "json",
    "blocking",
] }
time = { version = "0.3.17", features = [
    "formatting",
    "macros",
    "serde",
    "serde-human-readable",
    "local-offset",
] }
diesel_migrations = { version = "2.0.0", features = ["sqlite"] }
rand = "0.8.5"
hmac = "0.12.1"
sha1 = "0.10.5"
urlencoding = "2.1.2"
base64 = "0.21.0"
indicatif = { version = "0.17.3", features = ["improved_unicode"] }

[profile.dev.package."*"]
opt-level = 2
